deployments/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetsamplewebapi-dep
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnetsamplewebapi
  template:
    metadata:
      labels:
        app: dotnetsamplewebapi
      annotations:
        linkerd.io/inject: disabled
    spec:
      containers:
        - name: dotnetsamplewebapi
          image: gcr.io/bubbly-yeti-377212/dotnetsamplewebapi:$IMAGE_TAG_VERSION
          args: []
      terminationGracePeriodSeconds: 30
          ports:
          - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
