deployments/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetsamplewebapi-svc
  namespace: default
spec:
  selector:
    app: dotnetsamplewebapi
  ports:
    - port: 8085
      targetPort: 80
  type: LoadBalancer
